--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,36 +1,22 @@
-/* body{
-    background-color: red;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;  
 }
 
-body{
-    background-color: gray;
-} */
-
-h4{
-    color: red;
-    font-size: 30px;
-    line-height: 35px;
+.container{
+    max-width: 1920px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 48px;
 }
 
-a{
-    font-size: 50px;
-    background-color: aqua;
+.logo img{
+    width: 80px;
+    height: 80px;
 }
-/* h4 class id div  */
-div{
-    background-color: royalblue;
+.outerdiv {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-.link h4{
-  background-color: gray;     
-}
-.abc{
-    font-size: 70px;
-}
-#links h4{
-    color: blue;
-}
-/* .link a:last-child{
-    color: chartreuse;
-} */
-
-/* .class, #id, tag, */
