--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,3 +20,9 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.button
+{
+    background: rgb(171, 171, 25);
+font-size: larger;
+}
