--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,7 +162,7 @@ Style an element when it gets focus */
 } */
 
 .Another Text{
-    color: #050C26;
+    color: #06185a;
     font-family: Poppins;
     font-size: 40px;
     font-style: normal;
@@ -170,4 +170,19 @@ Style an element when it gets focus */
     line-height: 167.5%; /* 67px */
     letter-spacing: 0.8px;
     text-transform: capitalize;
+}
+.Footer text{
+    color: #606060;
+    text-align: justify;
+    font-family: Roboto;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 31px; /* 163.158% */
+}
+
+.Footer{
+    width: 1920px;
+    height: 411px;
+    flex-shrink: 0;
 }
