--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,7 +161,7 @@ Style an element when it gets focus */
     justify-content: center !important;
 } */
 
-.Another Text{
+.Another_Text{
     color: #06185a;
     font-family: Poppins;
     font-size: 40px;
@@ -171,7 +171,7 @@ Style an element when it gets focus */
     letter-spacing: 0.8px;
     text-transform: capitalize;
 }
-.Footer text{
+.Footer_text{
     color: #606060;
     text-align: justify;
     font-family: Roboto;
@@ -185,4 +185,16 @@ Style an element when it gets focus */
     width: 1920px;
     height: 411px;
     flex-shrink: 0;
+}
+
+.side_text_footer{
+    color: #606060;
+    text-align: justify;
+    font-family: Roboto;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 31px; /* 163.158% */
+    width: 1920px
+
 }
